SUBDIRS = \
    rpi-alpine-base \
    rpi-alpine-base-consul \
    rpi-alpine-build \
    rpi-alpine-build-make \
    rpi-alpine-build-python \
    rpi-alpine-consul \
    rpi-alpine-dnsmasq \
    rpi-alpine-hostapd \
    rpi-alpine-jenkins-slave \
    rpi-alpine-kivy \
    rpi-alpine-nginx \
    rpi-alpine-rng \
    rpi-alpine-zabbix-agent \
    rpi-alpine-zabbix-monitor
